[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo = "0.10"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlInputElement',
  'MouseEvent',
  'EventTarget',
  'Element'
]